--- a/Camper_Cafe Menu/index.html
+++ b/Camper_Cafe Menu/index.html
@@ -12,9 +12,8 @@
             <h1>CAMPER CAFE</h1>
             <p>Est. 2020</p>
             <section>
-                <h2>Coffee</h2>
-            </section>
-            <article class="item">
+              <h2>Coffee</h2>
+              <article class="item">
                 <p class="flavour">French Vanilla</p><p class="price">3.00</p>
               </article>
               <article class="item">
@@ -29,6 +28,22 @@
               <article class="item">
                 <p class="flavour">Mocha</p><p class="price">4.50</p>
               </article>
+            </section>
+            <section>
+             <h2>Desserts</h2>
+             <article class="item">
+               <p class="dessert">Donut</p><p class="price">1.50</p>
+             </article>
+             <article class="item">
+               <p class="dessert">Cherry Pie</p><p class="price">2.75</p>
+             </article>
+             <article class="item">
+               <p class="dessert">Cheesecake</p><p class="price">3.00</p>
+             </article>
+             <article class="item">
+               <p class="dessert">Cinnamon Roll</p><p class="price">2.50</p>
+             </article>
+            </section>  
           </main>
         </div>
     </body>
