--- a/Photo Gallery/index.html
+++ b/Photo Gallery/index.html
@@ -11,15 +11,24 @@
       <h1>css flexbox photo gallery</h1>
     </header>
     <div class="gallery">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg" 
+        alt="A  Cute Cat sleeping">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg" 
+        alt="A  Cute Cat rolling on its back">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg" 
+        alt="A  Cute Cat gazing at something">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg" 
+        alt="A Cute Cat sleeping under white covers">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg"
+        alt="A  Cute Cat looking shocked">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg"
+        alt="Two Cute Cats gazing at something">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg"
+        alt="A Cute Cat shocked while under a rag">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg"
+        alt="A Cute Cat seeming surprised">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg"
+        alt="Two Cute Cats lying around">
     </div>
   </body>
 </html>
